--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "msedge-tts",
-    "version": "1.1.4",
+    "version": "1.2.0",
     "description": "An Azure Speech Service module that uses the Microsoft Edge Read Aloud API.",
     "author": "Migushthe2nd <Migushthe2nd@users.noreply.github.com>",
     "license": "GPL-3.0-or-later",
@@ -9,15 +9,20 @@
     "module": "./dist/index",
     "main": "./dist/index",
     "scripts": {
-        "start": "yarn run build && node test/index.js",
+        "start": "yarn run build",
+        "test": "yarn build && jest --verbose",
         "build": "tsc",
         "prepublishOnly": "yarn run build",
         "publish": "yarn publish --access=public"
     },
     "devDependencies": {
-        "@types/node": "^15.12.1",
-        "typescript": "^4.3.2",
-        "typedoc": "^0.22.2"
+        "@types/jest": "^29.5.3",
+        "@types/node": "^20.4.9",
+        "@types/websocket": "^1.0.5",
+        "jest": "^29.6.2",
+        "ts-jest": "^29.1.1",
+        "typedoc": "^0.22.2",
+        "typescript": "^5.1.6"
     },
     "dependencies": {
         "axios": "^0.21.1",
