--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "module": "commonjs",
         "target": "ES6",
         "declaration": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "skipLibCheck": true
     },
     "typedocOptions": {
         "entryPoints": ["src/index.ts"],
