--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "devDependencies": {
         "@types/jest": "^29.5.3",
         "@types/node": "^20.4.9",
+        "@types/tmp": "^0.2.3",
         "@types/websocket": "^1.0.5",
         "jest": "^29.6.2",
         "ts-jest": "^29.1.1",
         "typedoc": "^0.22.2",
+        "tmp": "^0.2.1",
         "typescript": "^5.1.6"
     },
     "dependencies": {
