--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "target": "ES6",
         "declaration": true,
         "outDir": "dist",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "skipDefaultLibCheck": true,
     },
     "typedocOptions": {
         "entryPoints": ["src/index.ts"],
