--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     },
     "files": [
         "dist/"
-    ]
+    ],
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
+      }
 }
