--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "msedge-tts",
-    "version": "1.2.4",
+    "name": "@xianminx/msedge-tts",
+    "version": "1.3.0",
     "description": "An Azure Speech Service module that uses the Microsoft Edge Read Aloud API.",
     "author": "Migushthe2nd <Migushthe2nd@users.noreply.github.com>",
     "license": "GPL-3.0-or-later",
